[gd_scene load_steps=7 format=3 uid="uid://dhuerf3lebk5h"]

[ext_resource type="Script" uid="uid://nqtjcgf0hfx1" path="res://car/distanceSensor.gd" id="1_usckp"]

[sub_resource type="PrismMesh" id="PrismMesh_56535"]

[sub_resource type="SphereMesh" id="SphereMesh_usckp"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5n78y"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_usckp"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_usckp"]
material = SubResource("StandardMaterial3D_usckp")

[node name="DistanceSensor" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
script = ExtResource("1_usckp")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, -3.55271e-15, 1, 0, 0, 0)
hit_back_faces = false

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 1, 0, 0, 0, 0.3, 0, 0, 0)
mesh = SubResource("PrismMesh_56535")

[node name="TargetHit" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
visible = false
mesh = SubResource("SphereMesh_usckp")
surface_material_override/0 = SubResource("StandardMaterial3D_5n78y")

[node name="TargetCylinder" type="MeshInstance3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 1, 0, 0, 0, 0.1, 0, 0, 0)
visible = false
mesh = SubResource("CylinderMesh_usckp")
